--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,3 +1,30 @@
 body {
 	background: #fff;
+	margin: 20px;
+}
+a, img {
+	border: none;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
+}
+th {
+	text-align: left;
+}
+.positive {
+	color: #2e7209;
+}
+.negative {
+	color: #a31616;
+}
+.progress {
+	border: 1px solid #000;
+	height: 12px;
+	opacity: 0.4;
+}
+.bar {
+	background: #000;
+	opacity: 0.6;
+	height: 12px;
 }
