--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,16 +1,22 @@
 body {
-	background: #fff;
+	background: #6b775f;
+	font: 12px "Helvetica", "Arial", sans-serif;
 	margin: 20px;
 }
 a, img {
 	border: none;
 	text-decoration: none;
 }
-a:hover {
-	text-decoration: underline;
+ul, li {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
 th {
 	text-align: left;
+}
+h1, h2, h3 {
+	margin: 0px;
 }
 .positive {
 	color: #2e7209;
@@ -27,4 +33,85 @@ th {
 	background: #000;
 	opacity: 0.6;
 	height: 12px;
+}
+#skills {
+	margin: 0px auto;
+	overflow: hidden;
+	width: 136px;
+}
+#skills a {
+	color: #d9c27e;
+	padding: 8px 12px;
+}
+#skills a:hover {
+	background: #67735c;
+	color: #ebd594;
+}
+#skills li {
+	float: left;
+	width: 120px;
+}
+#skills img {
+	float: left;
+	margin: -1px 8px 0px 0px;
+}
+#skills .arrow {
+	border: 5px solid transparent;
+	border-top-color: #565c51;
+	display: block;
+	margin-top: 5px;
+	margin-left: 100px;
+	position: absolute;
+}
+#skills .current {
+	border: 1px solid #474d42;
+	border-radius: 2px;
+	float: left;
+	width: 110px;
+}
+#skills .current:hover .arrow {
+	border-top-color: #474d42;
+}
+#skills .list {
+	background: #6b775f;
+	border: 1px solid #474d42;
+	border-radius: 2px;
+	margin-top: 36px;
+	overflow: hidden;
+	padding: 5px;
+	position: absolute;
+	width: 360px;
+	z-index: 1;
+}
+#skills .list a {
+	display: block;
+	border-radius: 2px;
+}
+#skills .list .active {
+	opacity: 0.25;
+}
+#contents {
+	background: #b9a88c;
+	box-shadow: 0px 1px rgba(0, 0, 0, 0.075);
+	border-top: 1px solid rgba(255, 255, 255, 0.175);
+	border-radius: 2px;
+	margin: 20px auto;
+	padding: 40px 40px;
+	width: 560px;
+}
+#contents h2 {
+	margin-bottom: 20px;
+	text-align: center;
+}
+#highscore {
+	margin: 0px auto;
+	width: 520px;
+}
+#highscore a {
+	color: #000;
+}
+#highscore th,
+#highscore td {
+	padding: 4px;
+	text-align: left;
 }
