--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,7 +1,8 @@
 body {
 	background: #6b775f;
 	font: 12px "Helvetica", "Arial", sans-serif;
-	margin: 20px;
+	margin: 30px;
+	min-width: 720px;
 }
 a, img {
 	border: none;
@@ -60,14 +61,13 @@ input, button {
 #header a:hover {
 	color: #ebd594;
 }
-#header .register {
+#logo {
 	float: left;
-	margin-top: 9px;
-	margin-left: 40px;
+	margin-left: 60px;
 }
 #skills {
 	float: left;
-	margin-left: 180px;
+	margin: 12px 0px 0px 28px;
 }
 #skills a:hover {
 	background: #67735c;
@@ -99,6 +99,7 @@ input, button {
 }
 #skills .list {
 	background: #6b775f;
+	box-shadow: 0px 1px rgba(0, 0, 0, 0.075);
 	border: 1px solid #474d42;
 	border-radius: 2px;
 	margin-top: 36px;
@@ -115,12 +116,18 @@ input, button {
 #skills .list .active {
 	opacity: 0.25;
 }
+#registration {
+	float: left;
+	margin-top: 21px;
+	margin-left: 40px;
+}
 #contents {
 	background: #b9a88c;
 	box-shadow: 0px 1px rgba(0, 0, 0, 0.075);
 	border-top: 1px solid rgba(255, 255, 255, 0.175);
 	border-radius: 2px;
 	margin: 20px auto;
+	overflow: hidden;
 	padding: 40px 40px;
 	width: 560px;
 }
@@ -205,5 +212,9 @@ input, button {
 	color: #a31616;
 }
 #register .success {
+	text-align: center;
+}
+#footer {
+	margin-top: 40px;
 	text-align: center;
 }
